--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/joegiralt/vellichor#readme",
   "devDependencies": {
     "@types/jest": "^24.0.23",
+    "@types/chance": "^1.0.7",
     "fast-check": "^1.18.1",
     "jest": "^24.9.0",
     "jest-chance": "^0.1.8",
@@ -30,8 +31,5 @@
   },
   "jest": {
     "globalSetup": "jest-chance"
-  },
-  "dependencies": {
-    "@types/chance": "^1.0.7"
   }
 }
