--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,8 @@ cache:
     - "node_modules"
 node_js:
   - "10"
+script:
+  - npm run lint
+  - npm run test -- --ci --verbose --coverage
 after_success:
   - codecov
