--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run test && npm run build",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "lint": "tslint 'src/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -28,9 +29,11 @@
     "jest-chance": "^0.1.8",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "tslint-config-prettier": "^1.18.0"
   },
   "jest": {
     "globalSetup": "jest-chance"
-  }
+  },
+  "dependencies": {}
 }
