--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "fast-check": "^1.18.1",
     "jest": "^24.9.0",
     "jest-chance": "^0.1.8",
+    "jsdoc": "^3.6.3",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.2",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.7.2"
   },
   "jest": {
     "globalSetup": "jest-chance"
