--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "prepare": "npm run test && npm run build",
     "test": "jest --coverage",
-    "lint": "tslint 'src/**/*.ts'"
+    "lint": "tslint 'src/**/*.ts'",
+    "docs": "tsc && node_modules/.bin/jsdoc -c jsdocconfig.json dist/**/* -d docs"
   },
   "repository": {
     "type": "git",
