--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run test && npm run build",
-    "test": "jest --coverage",
+    "test": "",
     "lint": "tslint 'src/**/*.ts'",
     "docs": "tsc && node_modules/.bin/jsdoc -c jsdocconfig.json -t node_modules/postman-jsdoc-theme dist/**/* README.md -d docs",
     "benchmark_thousand": "node benchmark/thousand",
@@ -39,7 +39,7 @@
     "jest-chance": "^0.1.8",
     "jsdoc": "^3.6.3",
     "postman-jsdoc-theme": "0.0.3",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^26.5.1",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.2"
